welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:5: error: not found: value &
    } else if (speed >= 61)&(speed <= 80){
                           ^